<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Activity1"
    android:orientation="vertical">


    <TextView
        android:id="@+id/txvSaludo"
        android:text="@string/txvSaludo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
    />

    <TextView
        android:id="@+id/txvNombre"
        android:text="@string/txvNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
    />

    <EditText
        android:id="@+id/edtNombre"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
    />

    <TextView
        android:id="@+id/txvTelefono"
        android:text="@string/txvTelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
    />
    <EditText
        android:id="@+id/edtTelefono"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:inputType="phone"
    />

    <Button
        android:id="@+id/btnGuardar"
        android:text="@string/btnGuardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
    />

    <Button
        android:id="@+id/btnListar"
        android:text="@string/btnListar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
    />


</LinearLayout>
